fixing too much space on home page

--- a/Chamber/styles/large.css
+++ b/Chamber/styles/large.css
@@ -97,7 +97,7 @@ margin-left: 40rem;
   .hero-section {
     position: relative;
     grid-column: 2/3;
-    grid-row: 1/3;
+    grid-row: 1/2;
     margin-top: 4.5rem;
     align-self: stretch
   }
@@ -155,7 +155,7 @@ margin-left: 40rem;
   .flex-row {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
     flex-direction: column;
     grid-column: 1 / 2;
     grid-row: 1 / 2;
@@ -188,7 +188,7 @@ margin-left: 40rem;
     grid-column: 2 / 3;
     grid-row: 3 / 4;
     width: auto;
-    margin-top: -20px;
+    margin-top: -300px;
   }
   .news-card {
     width: auto;
